--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.11.0",
