--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "bootstrap-vue": "^2.0.0-rc.11",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.20.2",
