--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-material": "^1.0.0-beta-10.2",
