--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
   },
