--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
-    "vue-material": "^1.0.0-beta-10.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
+    "vuetify": "^1.3.3",
     "vuex": "^3.0.1",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
