--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./built/",
+    "outDir": "./build/",
     "sourceMap": true,
     "strict": true,
     "module": "es2015",
     "moduleResolution": "node",
     "target": "es5",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "lib": ["dom", "es2015"]
   },
   "include": ["./src/**/*"]
 }
